# python-practice

./: .gitignore  README.md  pyproject.toml
docs/: handling-multiple-conditions.md  python-argument-unpacking.md
flask/: files.py  main.py
flask/extractor/: wanted.py
flask/modules/: csv_writer.py  playwright_manager.py  wanted_scraper.py
flask/templates/: home.html  search.html
src/: practice-2.py  practice-3.py  practice_1.py  practice_2.py  practice_4.py  practice_5.py  practice_6.py
src/utils/: find.py
