[project]
name = "python-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "DongHeon Lee",email = "niche3600@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pyproject-flake8 (>=7.0.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
(
  /(
      \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
# 型チェックの基本設定
strict = true

# 特定のフォルダ・ファイルを無視
exclude = "(^build/|^dist/)"

# エラー表示を詳しくする
show_error_codes = true

# 動的型付け（`Any`型）を許可しない
disallow_any_unimported = true
disallow_any_generics = true

# 未チェックコードを許可しない
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
